--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -113,6 +113,24 @@
                         <i class="fas fa-question icon-lg"></i>
                     </a>
                 </div>
+
+                            <!-- Columna para Política de Privacidad -->
+            <div class="col text-center">
+                <a href="{% url 'privacy_policy' %}" class="text-decoration-none">
+                    <p class="text-white text-lg">Privacy</p>
+                    <i class="fas fa-lock icon-lg"></i>
+                </a>
+            </div>
+
+            <!-- Columna para Términos y Condiciones -->
+            <div class="col text-center">
+                <a href="{% url 'terms_and_conditions' %}" class="text-decoration-none">
+                    <p class="text-white text-lg">Terms</p>
+                    <i class="fas fa-file-contract icon-lg"></i>
+                </a>
+            </div>
+
+
                 <div class="col social-medias-container text-center">
                     <a href="https://www.instagram.com/banquetbuddy_oficial/" target="_blank" class="text-decoration-none">
                         <p class="text-white text-lg">Instagram</p>
