fix:replace particular field with email in details

--- a/banquetBuddy/catering_owners/templates/view_reservation.html
+++ b/banquetBuddy/catering_owners/templates/view_reservation.html
@@ -76,7 +76,7 @@
             <li><strong>Details:</strong> {{ event.details }}</li>
             <li><strong>Number of Guests:</strong> {{ event.number_guests }}</li>
             <li><strong>Booking State:</strong> {{ event.booking_state }}</li>
-            <li><strong>Particular:</strong> {{ event.particular.user.first_name}} {{ event.particular.user.last_name }}</li>
+            <li><strong>Particular:</strong> {{ event.particular.user.email}}</li>
         </ul>
     </div>
 </div>
