fix : errors on redirections

--- a/banquetBuddy/catering_employees/templates/error_employee_curriculum.html
+++ b/banquetBuddy/catering_employees/templates/error_employee_curriculum.html
@@ -45,7 +45,7 @@
     <div class="container">
         <h1>Curriculum error</h1>
         <p>Necesitas agregar un curriculum para poder aplicar a la oferta de trabajo seleccionada</p>
-        <button onclick="window.location.href='/profile-edit'" class="button-appearance">Agregar curriculum</button>
+        <button onclick="window.location.href='/profilex-edit'" class="button-appearance">Agregar curriculum</button>
     </div>
 </body>
 </html>
