--- a/banquetBuddy/core/templates/core/notifications.html
+++ b/banquetBuddy/core/templates/core/notifications.html
@@ -44,7 +44,11 @@
             
         {% for notification in notifications %}
         <div class="notification">
+        {% if request.user.is_authenticated and request.user.EmployeeUsername %}
+            <h2 class="notificationTitle">{{ notification.job_application.offer.title }}</h2>
+        {% else %}
             <h2 class="notificationTitle">{{ notification.event.name }}</h2>
+        {% endif %}
             <h4>{{ notification.message }}</h4>
         </div>
         {% endfor %}
