--- a/banquetBuddy/catering_owners/templates/add_menu.html
+++ b/banquetBuddy/catering_owners/templates/add_menu.html
@@ -4,10 +4,10 @@
 <div class="container mt-4 mb-4">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card" style="background-color: #02483e">
-                <div class="container">
+            <form method="post" enctype="multipart/form-data">
+                <div class="card" style="background-color: #02483e">
                     <h2 class="mt-4 mb-3 text-white text-center">Add Menu</h2>
-                    <form method="post" enctype="multipart/form-data">
+                    <div class="container">
                         {% csrf_token %}
                         <div class="form-group text-white">
                             <label for="id_name">Name:</label>
@@ -25,12 +25,12 @@
                             <label for="id_cateringservice">Catering Service:</label>
                             {{ form.cateringservice }}
                         </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-primary" style="background-color: #54bfaf">Save Menu</button>
-                        </div>
-                    </form>
+                    </div>
                 </div>
-            </div>
+                <div class="text-center mt-3">
+                    <button type="submit" class="btn btn-primary" style="background-color: #54bfaf">Save Menu</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
