--- a/banquetBuddy/catering_owners/templates/list_my_services.html
+++ b/banquetBuddy/catering_owners/templates/list_my_services.html
@@ -4,78 +4,89 @@
 {% block content %}
 
 <style>
-    .card {
-        height: 400px
-    }
-    .btn-create {
-        display: block;
-        width: 80%;
-        padding: 0.5%;
-        background-color: #02483E;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        margin-top: 4%;
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-    .btn-create:hover {
-    color: white; 
+  .card {
+    height: 400px
+  }
+
+  .btn-create {
+    display: block;
+    width: 80%;
+    padding: 0.5%;
+    background-color: #02483E;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 4%;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .btn-employees {
+    background-color: #047967;
+    color: white;
+  }
+
+  .btn-create:hover {
+    color: white;
     text-decoration: none !important;
-}
+  }
 </style>
 </style>
 
 <div class="container mt-3">
-    <h1 class="mb-4">Services list</h1>
-    <hr />
+  <h1 class="mb-4">Services list</h1>
+  <hr />
 
-    {% if messages %} 
-      {% for message in messages %}
-        <div class="alert alert-danger" role="alert">{{ message }}</div>
-      {% endfor %} 
-    {% endif %}
+  {% if messages %}
+  {% for message in messages %}
+  <div class="alert alert-danger" role="alert">{{ message }}</div>
+  {% endfor %}
+  {% endif %}
 
-    <a href="{% url 'create_service' %}">
-        <button class="btn btn-create mb-4" >
-            Create a new service
-        </button>
-    </a>
-  
-    <div class="row">
+  <a href="{% url 'create_service' %}">
+    <button class="btn btn-create mb-4">
+      Create a new service
+    </button>
+  </a>
+
+  <div class="row">
     {% for service in services %}
     <div class="col-md-4">
-            <div class="card mb-4 rounded-lg shadow">
-                <h5 class="card-title mt-4" style="text-align: center;">{{ service.name }}</h5>
-                <div class="card-body text-dark">
-                    <hr style="border-top: 2px solid black; width: 50%;">
-                    <p class="card-text" style="text-align: center;">{{ service.description }}</p>
-                    <p class="card-text" style="text-align: center;">{{ service.location }}</p>
-                    <p class="card-text" style="text-align: center;">{{ service.capacity }} guests</p>
-                    <p class="card-text" style="text-align: center;">{{ service.price }} €</p>
-                </div>
-                <div class="card-footer" style="text-align: center;">
-                  <a href="{% url 'update_service' service.id %}">
-                      <button class="btn btn-info">
-                        Edit
-                      </button>
-                  </a>
-                  <a href="{% url 'delete_service' service.id %}">
-                    <button class="btn btn-danger">
-                        Delete
-                    </button>
-                </a>
-              </div>
-            </div>
-        </a>
+      <div class="card mb-4 rounded-lg shadow">
+        <h5 class="card-title mt-4" style="text-align: center;">{{ service.name }}</h5>
+        <div class="card-body text-dark">
+          <hr style="border-top: 2px solid black; width: 50%;">
+          <p class="card-text" style="text-align: center;">{{ service.description }}</p>
+          <p class="card-text" style="text-align: center;">{{ service.location }}</p>
+          <p class="card-text" style="text-align: center;">{{ service.capacity }} guests</p>
+          <p class="card-text" style="text-align: center;">{{ service.price }} €</p>
+        </div>
+        <div class="card-footer" style="text-align: center;">
+          <a href="{% url 'list_employee' service.id %}">
+            <button class="btn btn-employees">
+                Employees
+            </button>
+          </a>
+          <a href="{% url 'update_service' service.id %}">
+            <button class="btn btn-info">
+              Edit
+            </button>
+          </a>
+          <a href="{% url 'delete_service' service.id %}">
+            <button class="btn btn-danger">
+              Delete
+            </button>
+          </a>
+        </div>
+      </div>
+      </a>
     </div>
 
-      {% empty %}
-        <div>No services available.</div>
-      {% endfor %}
-    </div>
+    {% empty %}
+    <div>No services available.</div>
+    {% endfor %}
   </div>
+</div>
 
 {% endblock %}
-
