--- a/banquetBuddy/catering_owners/templates/offers/delete_offer.html
+++ b/banquetBuddy/catering_owners/templates/offers/delete_offer.html
@@ -44,11 +44,9 @@
 <h3 class="text">Are you sure you want to delete the offer "{{ offer.title }}"?</h3>
             <form action="{% url 'confirm_delete_offer' offer.id %}" method="post">
                 {% csrf_token %}
-                <input class="butYes" type="submit" href="{% url 'offer_list' %}" value="Yes, delete">
+                <button class="butYes" type="submit" href="{% url 'offer_list' %}"> Yes</button>
             </form>
+            <a href="{% url 'offer_list' %}" class="butNo">No</a>
 
-            <form>
-                <input class="butNo" href="{% url 'offer_list' %}" value="No">
-            </form>
 
 {% endblock %}
