--- a/banquetBuddy/core/static/core/styles.css
+++ b/banquetBuddy/core/static/core/styles.css
@@ -76,10 +76,18 @@ main {
     color: white;
     box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
 }
+.btn-login:hover {
+    background-color: #3f8c7f;
+    color: white;
+}
 .btn-signup {
     background-color: #02483E;
     color: white;
     box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
+}
+.btn-signup:hover {
+    background-color: #01352e;
+    color: white;
 }
 .btn-login,
 .btn-signup {
