feat: Add payment gateway

--- a/banquetBuddy/core/templates/core/subscriptionsplans.html
+++ b/banquetBuddy/core/templates/core/subscriptionsplans.html
@@ -91,7 +91,7 @@
 
             {%else%}
             <div class="plan-btn" style="margin-top:30% ;">
-                <button type="button" href="" class="btn btn-dark"><a href="{% url 'change_of_plan_Base' %}"
+                <button type="button" href="" class="btn btn-dark"><a href="{% url 'process_base' %}"
                         class="text-decoration-none text-light">Get ready</a></button>
             </div>
             {%endif %}
@@ -126,7 +126,7 @@
 
             {%else%}
             <div class="plan-btn" style="margin-top:20% ;">
-                <button type="button" href="" class="btn btn-dark"><a href="{% url 'change_of_plan_Premium' %}"
+                <button type="button" href="" class="btn btn-dark"><a href="{% url 'process_premium' %}"
                         class="text-decoration-none text-light">Get ready</a></button>
             </div>
             {%endif %}
@@ -160,7 +160,7 @@
             </div>
             {%else%}
             <div class="plan-btn" style="margin-top:20% ;">
-                <button type="button" href="" class="btn btn-dark"><a href="{% url 'change_of_plan_Pro' %}"
+                <button type="button" href="" class="btn btn-dark"><a href="{% url 'process_pro' %}"
                         class="text-decoration-none text-light">Get ready</a></button>
             </div>
             {%endif %}
