--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -11,6 +11,10 @@
     right: 1cm; 
     }
 
+    header {
+        background-color: white;
+    }
+
 </style>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-vyQ7N3S2F+Dd2jhN07XSyZ6R1ZSeznM57XjLSeV/DtBrJrE8c3H0RFuytWI3jGX5UJi+g8PXTPX/gqThXx1PEw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
